[package]
name = "kube-node-dns"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version = "1.8.11", features = ["behavior-version-latest"] }
aws-sdk-route53 = "1.103.0"
clap = { version = "4.5.53", features = ["derive"] }
futures = "0.3.31"
humantime = "2.3.0"
ip_rfc = "0.1.0"
joinery = "3.1.0"
k8s-openapi = { version = "0.26.0", features = ["latest"] }
kube = { version = "2.0.1", default-features = false, features = ["client", "runtime", "rustls-tls", "aws-lc-rs"] }
miette = "7.6.0"
network-interface = "2.0.3"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
